# finans

./: Cargo.toml
crates/board/src/: lib.rs
crates/camera/: Cargo.toml
crates/camera/src/: lib.rs
crates/debug/: Cargo.toml
crates/debug/src/: lib.rs
src/: main.rs
